fix create with frame

--- a/JFBannerExample/JFBannerExample/Base.lproj/Main.storyboard
+++ b/JFBannerExample/JFBannerExample/Base.lproj/Main.storyboard
@@ -16,49 +16,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nnN-q4-C0H" customClass="BannerView" customModule="JFBanner">
-                                <rect key="frame" x="0.0" y="88" width="414" height="200"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eu7-nR-LFu">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j3s-T0-iUf">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nnN-q4-C0H" customClass="BannerView" customModule="JFBanner">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                                <color key="backgroundColor" white="0.83096996290000003" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="0w9-If-W60"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3T1-WT-PGk" customClass="BannerView" customModule="JFBanner">
+                                                <rect key="frame" x="0.0" y="220" width="414" height="50"/>
+                                                <color key="backgroundColor" white="0.83096996290000003" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="CBR-mm-ODX"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TYq-hM-Qu7" customClass="BannerView" customModule="JFBanner">
+                                                <rect key="frame" x="0.0" y="290" width="414" height="200"/>
+                                                <color key="backgroundColor" white="0.83096996290000003" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="KHv-a5-b8o"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GDD-io-Kgc" customClass="BannerView" customModule="JFBanner">
+                                                <rect key="frame" x="0.0" y="510" width="414" height="200"/>
+                                                <color key="backgroundColor" white="0.83096996290000003" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="kOB-6e-Wra"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="nnN-q4-C0H" firstAttribute="top" secondItem="j3s-T0-iUf" secondAttribute="top" id="4l1-S5-ebh"/>
+                                            <constraint firstAttribute="trailing" secondItem="nnN-q4-C0H" secondAttribute="trailing" id="6oj-QB-IuG"/>
+                                            <constraint firstItem="TYq-hM-Qu7" firstAttribute="top" secondItem="3T1-WT-PGk" secondAttribute="bottom" constant="20" id="Act-C3-1TT"/>
+                                            <constraint firstItem="GDD-io-Kgc" firstAttribute="top" secondItem="TYq-hM-Qu7" secondAttribute="bottom" constant="20" id="Akh-5G-KYG"/>
+                                            <constraint firstAttribute="trailing" secondItem="GDD-io-Kgc" secondAttribute="trailing" id="GRh-XN-h9F"/>
+                                            <constraint firstAttribute="height" constant="1000" id="KSz-SW-nW3"/>
+                                            <constraint firstItem="3T1-WT-PGk" firstAttribute="leading" secondItem="j3s-T0-iUf" secondAttribute="leading" id="ZFC-Jn-QY4"/>
+                                            <constraint firstItem="TYq-hM-Qu7" firstAttribute="leading" secondItem="j3s-T0-iUf" secondAttribute="leading" id="hhc-kJ-CaU"/>
+                                            <constraint firstItem="nnN-q4-C0H" firstAttribute="leading" secondItem="j3s-T0-iUf" secondAttribute="leading" id="ivR-pf-1Dy"/>
+                                            <constraint firstItem="GDD-io-Kgc" firstAttribute="leading" secondItem="j3s-T0-iUf" secondAttribute="leading" id="rMT-Hx-DbS"/>
+                                            <constraint firstAttribute="trailing" secondItem="TYq-hM-Qu7" secondAttribute="trailing" id="s0J-th-3nR"/>
+                                            <constraint firstItem="3T1-WT-PGk" firstAttribute="top" secondItem="nnN-q4-C0H" secondAttribute="bottom" constant="20" id="t0f-VN-I7D"/>
+                                            <constraint firstAttribute="trailing" secondItem="3T1-WT-PGk" secondAttribute="trailing" id="zKW-Gc-DXo"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="0w9-If-W60"/>
+                                    <constraint firstAttribute="bottom" secondItem="j3s-T0-iUf" secondAttribute="bottom" id="MyB-u7-Oji"/>
+                                    <constraint firstItem="j3s-T0-iUf" firstAttribute="leading" secondItem="eu7-nR-LFu" secondAttribute="leading" id="a6C-Kc-iKg"/>
+                                    <constraint firstItem="j3s-T0-iUf" firstAttribute="top" secondItem="eu7-nR-LFu" secondAttribute="top" id="qQV-5U-HTP"/>
+                                    <constraint firstAttribute="trailing" secondItem="j3s-T0-iUf" secondAttribute="trailing" id="s7z-Lw-ngI"/>
                                 </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3T1-WT-PGk" customClass="BannerView" customModule="JFBanner">
-                                <rect key="frame" x="0.0" y="308" width="414" height="50"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="CBR-mm-ODX"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TYq-hM-Qu7" customClass="BannerView" customModule="JFBanner">
-                                <rect key="frame" x="0.0" y="378" width="414" height="200"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="KHv-a5-b8o"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GDD-io-Kgc" customClass="BannerView" customModule="JFBanner">
-                                <rect key="frame" x="0.0" y="598" width="414" height="200"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="kOB-6e-Wra"/>
-                                </constraints>
-                            </view>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="nnN-q4-C0H" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5TE-jx-58a"/>
-                            <constraint firstItem="TYq-hM-Qu7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="65i-nh-kQ6"/>
-                            <constraint firstItem="GDD-io-Kgc" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FwF-xb-Dkv"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nnN-q4-C0H" secondAttribute="trailing" id="J3O-HD-MOc"/>
-                            <constraint firstItem="TYq-hM-Qu7" firstAttribute="top" secondItem="3T1-WT-PGk" secondAttribute="bottom" constant="20" id="M4l-QZ-GS1"/>
-                            <constraint firstItem="GDD-io-Kgc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OKA-Ku-hsY"/>
-                            <constraint firstItem="3T1-WT-PGk" firstAttribute="top" secondItem="nnN-q4-C0H" secondAttribute="bottom" constant="20" id="P12-pG-Pw9"/>
-                            <constraint firstItem="3T1-WT-PGk" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="PPp-mE-IJU"/>
-                            <constraint firstItem="TYq-hM-Qu7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Z0b-Xp-T1s"/>
-                            <constraint firstItem="3T1-WT-PGk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tLL-XB-cvJ"/>
-                            <constraint firstItem="GDD-io-Kgc" firstAttribute="top" secondItem="TYq-hM-Qu7" secondAttribute="bottom" constant="20" id="ukX-g0-r35"/>
-                            <constraint firstItem="nnN-q4-C0H" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yaW-d4-rXx"/>
+                            <constraint firstItem="eu7-nR-LFu" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="92x-lk-pgl"/>
+                            <constraint firstAttribute="trailing" secondItem="eu7-nR-LFu" secondAttribute="trailing" id="A7T-km-tle"/>
+                            <constraint firstAttribute="bottom" secondItem="eu7-nR-LFu" secondAttribute="bottom" id="LOr-75-ndS"/>
+                            <constraint firstItem="eu7-nR-LFu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="R1e-ok-F02"/>
+                            <constraint firstItem="j3s-T0-iUf" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="iYI-Q9-wds"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -68,6 +93,7 @@
                         <outlet property="bannerView2" destination="3T1-WT-PGk" id="0cP-Dg-vsv"/>
                         <outlet property="bannerView3" destination="TYq-hM-Qu7" id="Jc4-tW-A7s"/>
                         <outlet property="bannerView4" destination="GDD-io-Kgc" id="pP3-lW-8ww"/>
+                        <outlet property="contentView" destination="j3s-T0-iUf" id="HsA-uv-rqr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
